--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jacob Kinley</title>
     <link rel="stylesheet" href="">
-    <style>
-
-    </style>
     <script>
 
     </script>
 </head>
 <body>
-    <h1>WIP Site, still testing</h1>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <h1>Jacob Kinley</h1>
+                        <h2>UX/UI Designer</h2>
+                    </a>
+                </li>
+            </ul>
+            
+        </nav>
+        
+    </header>
 
 </body>
 </html>
