--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
                         <h2>UX/UI Designer</h2>
                     </a>
                 </li>
+                <li>
+                    <a href="about.html">about</a>
+                </li>
+                <li>
+                    <a href="Jacob_Kinley_Resume.pdf">resume</a>
+                </li>
+                <li>
+                    <a href="mailto:me@jacobkinley.com">me(at)jacobkinley.com</a>
+                </li>
             </ul>
-            
         </nav>
-        
     </header>
 
 </body>
