--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jacob Kinley</title>
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="style.css">
     <script>
 
     </script>
