--- a/p1.html
+++ b/p1.html
@@ -23,19 +23,24 @@
                 </li>
                 <li>
                     <a href="projects.html">
-                        Projects<div id="unselected"></div>
+                        Projects<div id="selected"></div>
                     </a>
                 </li>
                 <li>
                     <a href="resume.html">
-                        Resume<div id="selected"></div>
+                        Resume<div id="unselected"></div>
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
-        <iframe src="assets/resume/Kinley_Jacob_Resume.pdf"></iframe>
+    <main id="p1grid">
+        <h1 id="p1head">Fluent Design File Explorer</h1>
+        <image id="explorer" src="assets/p1/explorer.png" alt="File Explorer Redesign" ></image>
+        <p id="p1intro">The Windows File Explorer is one of the most widely used interfaces in the world. When Microsoft initially announced the Fluent Design System, I was excited to see how they would implement it across the Windows 10 OS. This redesign is just one way I imagine the File Explorer could be transformed.</p>
+        <image id="reveal" src="assets/p1/reveal.png" alt="Fluent Design Reveal" ></image>
+        <p id="fds" >I wanted to focus on the features of the Fluent Design System that were easily marketable. "Reveal" provides more discoverability to the user. By highlighting the edges of button containers, the user finds out that something is interactable without the UI being cluttered with lines and borders. "Acrylic" is the blurred material effect on the sidebar. It makes the program appear to have its own space on the desktop.</p>
+
     </main>
     <footer>&copy Jacob Kinley | <a href="mailto:me@jacobkinley.com">Contact me!</a></footer>
 </body>
