--- a/index.html
+++ b/index.html
@@ -11,38 +11,45 @@
 </head>
 <body>
     <header>
+        <div id="headwrap">
         <a href="index.html">
-        <svg id="monogram" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#c1272d;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
+        <svg id="monogram" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#bb133e;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
         </a>
         <nav>
             <ul>
                 <li>
                     <a href="index.html">
-                        Home<div id="selected"></div>
+                        Home<div class="selected"></div>
                     </a>
                 </li>
                 <li>
                     <a href="projects.html">
-                        Projects<div id="unselected"></div>
+                        Projects<div class="unselected"></div>
                     </a>
                 </li>
                 <li>
                     <a href="resume.html">
-                        Resume<div id="unselected"></div>
+                        Resume<div class="unselected"></div>
                     </a>
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
-    <main id="indexgrid">
-        <h1 id="nameme">Jacob Kinley</h1>
-        <image id="photome" src="assets/images/placeholder.png" alt="Image of Jacob Kinley"></image>
-        <p id="about">I’m a 20-year-old Human Centered Computing student at Rochester Institute of Technology. I originally came in as a computer science student, but learned that I was drawn more to the design and usability of the systems I was working on than the algorithms behind them. Halfway through my second year, I learned about a new major called Human Centered Computing and instantly knew it was the right fit. I’ve got to refactor how I approach problem-solving, but that’s just another step in the development of a better me.</p>
-        <p id="extra">I am a student ambassador for my major’s department, and I have stepped into a leadership position because of it. I oversee bringing student feedback and criticism to the department’s attention. I am also an active member of the RIT UX Club’s graphics/design team for which I help design event posters and club branding.</p>
-        <p id="philosophy">I believe programs and interfaces should augment the user. They should elicit a sense of discovery, play, and achievement. They should not feel mysterious, unwieldy, or hard to use. The end goals of programs and interfaces vary widely, but the user experiences should follow these core tenets.</p>
-        <p id="look">Feel free to have a look at my resume or reach out to me!</p>
-
+    <main>
+        <h1>Jacob Kinley</h1>
+        <img src="assets/images/placeholder.png" alt="Image of Jacob Kinley"></img>
+        <p>I’m a 20-year-old Human Centered Computing student at Rochester Institute of Technology. I originally came in as a computer science student, but learned that I was drawn more to the design and usability of the systems I was working on than the algorithms behind them. Halfway through my second year, I learned about a new major called Human Centered Computing and instantly knew it was the right fit. I’m refactoring how I approach problem-solving, but that’s just another step in the development of a better me.</p>
+        <p>I am a student ambassador for my major’s department, and I have stepped into a leadership position because of it. I oversee bringing student feedback and criticism to the department’s attention. I am also an active member of the RIT UX Club’s graphics/design team for which I help design event posters and club branding.</p>
+        <p>I believe programs and interfaces should augment the user. They should elicit a sense of discovery, play, and achievement. They should not feel mysterious, unwieldy, or hard to use. The end goals of programs and interfaces vary widely, but the user experiences should follow these core tenets.</p>
+        <p>Feel free to have a look at my resume or reach out to me!</p>
     </main>
-    <footer>&copy Jacob Kinley | <a href="mailto:me@jacobkinley.com">Contact me!</a></footer>
+    <footer>
+        <div id="footwrap">
+        <div>&copy Jacob Kinley</div>
+        <div>|</div>
+        <div><a href="mailto:me@jacobkinley.com">Contact me!</a></div>
+        </div>
+    </footer>
 </body>
 </html>
