--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <div id="headwrap">
         <a href="index.html">
         <svg id="monogram" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#c1272d;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
         </a>
@@ -18,25 +19,32 @@
             <ul>
                 <li>
                     <a href="index.html">
-                        Home<div id="unselected"></div>
+                        Home<div class="unselected"></div>
                     </a>
                 </li>
                 <li>
                     <a href="projects.html">
-                        Projects<div id="unselected"></div>
+                        Projects<div class="unselected"></div>
                     </a>
                 </li>
                 <li>
                     <a href="resume.html">
-                        Resume<div id="selected"></div>
+                        Resume<div class="selected"></div>
                     </a>
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
     <main>
         <iframe src="assets/resume/Kinley_Jacob_Resume.pdf"></iframe>
     </main>
-    <footer>&copy Jacob Kinley | <a href="mailto:me@jacobkinley.com">Contact me!</a></footer>
+    <footer>
+        <div id="footwrap">
+        <div>&copy Jacob Kinley</div>
+        <div>|</div>
+        <div><a href="mailto:me@jacobkinley.com">Contact me!</a></div>
+        </div>
+    </footer>
 </body>
 </html>
