--- a/fluent.html
+++ b/fluent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley</title>
+    <title>Jacob Kinley | Fluent File Explorer</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
 
@@ -36,7 +36,7 @@
         </nav>
         </div>
         <div id="projnav">
-            <a href="p1.html">
+            <a href="fluent.html">
                 <img src="assets/p1/p1image.png" alt="Project 1 Image"></img>
             </a>
             <a href="">
