--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
         </nav>
         </div>
         <div id="projnav">
-            <a href="p1.html">
+            <a href="fluent.html">
                 <img src="assets/p1/p1image.png" alt="Project 1 Image"></img>
             </a>
             <a href="">
@@ -49,7 +49,7 @@
     </header>
     <main>
         <h1>Fluent Design File Explorer</h1>
-        <a href="p1.html">
+        <a href="fluent.html">
             <img src="assets/p1/p1image.png" alt="Project 1 Image"></img>
         </a>
         <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
