--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley</title>
+    <title>Jacob Kinley | Resume</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
 
