--- a/fluent.html
+++ b/fluent.html
@@ -37,21 +37,21 @@
         </div>
         <div id="projnav">
             <a href="fluent.html">
-                <img src="assets/p1/p1image.png" alt="Project 1 Image"></img>
+                <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
             </a>
             <a href="">
                 <img src="assets/images/placeholder.png" alt="Placeholder"></img>
             </a>
-            <a href="">
-                <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+            <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
+                <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
             </a>
         </div>
     </header>
     <main>
         <h1>Fluent Design File Explorer</h1>
-        <img class="projectpic" src="assets/p1/explorer.png" alt="File Explorer Redesign" ></img>
+        <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign" ></img>
         <p>The Windows File Explorer is one of the most widely used interfaces in the world. When Microsoft initially announced the Fluent Design System, I was excited to see how they would implement it across the Windows 10 OS. This redesign is just one way I imagine the File Explorer could be transformed.</p>
-        <img class="projectpic" src="assets/p1/reveal.png" alt="Fluent Design Reveal" ></img>
+        <img class="projectpic" src="assets/fluent/reveal.png" alt="Fluent Design Reveal" ></img>
         <p>I wanted to focus on the features of the Fluent Design System that were easily marketable. "Reveal" provides more discoverability to the user. By highlighting the edges of button containers, the user finds out that something is interactable without the UI being cluttered with lines and borders. "Acrylic" is the blurred material effect on the sidebar. It makes the program appear to have its own space on the desktop.</p>
 
     </main>
