--- a/projects.html
+++ b/projects.html
@@ -37,20 +37,20 @@
         </div>
         <div id="projnav">
             <a href="fluent.html">
-                <img src="assets/p1/p1image.png" alt="Project 1 Image"></img>
+                <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
             </a>
             <a href="">
                 <img src="assets/images/placeholder.png" alt="Placeholder"></img>
             </a>
-            <a href="">
-                <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+            <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
+                <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
             </a>
         </div>
     </header>
     <main>
         <h1>Fluent Design File Explorer</h1>
         <a href="fluent.html">
-            <img src="assets/p1/p1image.png" alt="Project 1 Image"></img>
+            <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
         </a>
         <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
         <h1>Placeholder</h1>
@@ -59,10 +59,10 @@
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
         <h1>Placeholder</h1>
-        <a href="">
-            <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+        <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
+            <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
         </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
+        <p>Individual project to create a website about my favorite place. Utilizes css grid for layout and php for page creation.</p>
     </main>
     <footer>
         <div id="footwrap">
