--- a/projects.html
+++ b/projects.html
@@ -58,9 +58,9 @@
             <img src="assets/images/placeholder.png" alt="Placeholder"></img>
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
-        <h1>Placeholder</h1>
+        <h1>Web and Mobile II Final</h1>
         <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-            <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
+            <img src="assets/wmii/jetcarrierasset.png" alt="web mobile ii final"></img>
         </a>
         <p>Individual project to create a website about my favorite place. Utilizes css grid for layout and php for page creation.</p>
     </main>
