--- a/projects.html
+++ b/projects.html
@@ -36,11 +36,11 @@
         </nav>
         </div>
         <div id="projnav">
-            <a href="fluent.html">
-                <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
-            </a>
             <a href="">
                 <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+            </a>
+            <a href="fluent.html">
+                <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
             </a>
             <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
                 <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
@@ -48,17 +48,17 @@
         </div>
     </header>
     <main>
+        <h1>Placeholder</h1>
+        <a href="">
+            <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+        </a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
         <h1>Fluent Design File Explorer</h1>
         <a href="fluent.html">
             <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
         </a>
         <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
-        <h1>Placeholder</h1>
-        <a href="">
-            <img src="assets/images/placeholder.png" alt="Placeholder"></img>
-        </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
-        <h1>Web and Mobile II Final</h1>
+        <h1>Web and Mobile II Final Project</h1>
         <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
             <img src="assets/wmii/jetcarrierasset.png" alt="web mobile ii final"></img>
         </a>
