--- a/fluent.html
+++ b/fluent.html
@@ -9,7 +9,7 @@
 
     </script>
 </head>
-<body>
+<body onload="document.body.style.opacity='1'">
     <header>
         <div id="headwrap">
         <a href="index.html">
