New Page - Holo Message
- New page, not finished, but new page

--- a/fluent.html
+++ b/fluent.html
@@ -36,7 +36,7 @@
         </nav>
         </div>
         <div id="projnav">
-            <a href="">
+            <a href="holomessage.html">
                   <img src="assets/images/placeholder.png" alt="Placeholder"></img>
             </a>
             <a href="fluent.html">
