--- a/holomessage.html
+++ b/holomessage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley | Projects</title>
+    <title>Jacob Kinley | Fluent File Explorer</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
 
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li>
-                    <a id="active" href="index.html">
+                    <a href="index.html">
                         Home<div class="unselected"></div>
                     </a>
                 </li>
@@ -37,7 +37,7 @@
         </div>
         <div id="projnav">
             <a href="holomessage.html">
-                <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+                  <img src="assets/images/placeholder.png" alt="Placeholder"></img>
             </a>
             <a href="fluent.html">
                 <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
@@ -48,21 +48,15 @@
         </div>
     </header>
     <main>
-        <h1>Placeholder</h1>
-        <a href="holomessage.html">
-            <img src="assets/images/placeholder.png" alt="Placeholder"></img>
-        </a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
-        <h1>Fluent Design File Explorer</h1>
-        <a href="fluent.html">
-            <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
-        </a>
-        <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
-        <h1>Web and Mobile II Final Project</h1>
-        <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-            <img src="assets/wmii/jetcarrierasset.png" alt="web mobile ii final"></img>
-        </a>
-        <p>Individual project to create a website about my favorite place. Utilizes css grid for layout and php for page creation.</p>
+        <h1>Hololens Messenger</h1>
+
+        <img class="projectpic" src="assets/images/placeholder.png" alt="Placeholder"></img>
+        
+        <figure>
+            <iframe id= "holodemo" width="512" height="300" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
+            <figcaption>Interactive lo-fi prototype</figcaption>
+        </figure>
+
     </main>
     <footer>
         <div id="footwrap">
