--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main>
-        <iframe src="assets/resume/Kinley_resume_spring_2018.pdf"></iframe>
+        <iframe id="resume" src="assets/resume/Kinley_resume_spring_2018.pdf"></iframe>
     </main>
     <footer>
         <div id="footwrap">
