--- a/holomessage.html
+++ b/holomessage.html
@@ -53,7 +53,7 @@
         <img class="projectpic" src="assets/images/placeholder.png" alt="Placeholder"></img>
         
         <figure>
-            <iframe id= "holodemo" width="512" height="300" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
+            <iframe id="holodemo" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
             <figcaption>Interactive lo-fi prototype</figcaption>
         </figure>
 
