Project Home Revamp
- 3 column layout for project home page
- more gridzzz (like, all over the place)

--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,11 @@
 <body onload="document.body.style.opacity='1'">
     <header>
         <div id="headwrap">
-        <a href="index.html">
-        <svg id="monogram" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
-        </a>
+            <div id="monogram">
+                <a href="index.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140.6 183.6"><defs><style>.cls-1{fill:#E0162B;}</style></defs><title>Asset 1</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,177.2,2.8,172a55,55,0,0,0,23.8,6C50,178,56,165.4,56,147.2V46.8H6.8V41.2H62V146c0,23.6-8.8,37.6-36.4,37.6A60.52,60.52,0,0,1,0,177.2ZM48.8,8.4c0-5.2,3.6-8.4,8-8.4s8,3.2,8,8.4-3.6,8.4-8,8.4S48.8,13.6,48.8,8.4Z"/><path class="cls-1" d="M59.8,101.6h.8l65.2-60.4h8l-74,68m28-29.6,4.4-4.4,48.4,61.6h-7.2Z"/></g></g></svg>
+                </a>
+            </div>
         <nav>
             <ul>
                 <li>
@@ -48,21 +50,29 @@
         </div>
     </header>
     <main>
-        <h1>Placeholder</h1>
-        <a href="holomessage.html">
-            <img src="assets/images/placeholder.png" alt="Placeholder"></img>
-        </a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
-        <h1>Fluent Design File Explorer</h1>
-        <a href="fluent.html">
-            <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
-        </a>
-        <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
-        <h1>Web and Mobile II Final Project</h1>
-        <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-            <img src="assets/wmii/jetcarrierasset.png" alt="web mobile ii final"></img>
-        </a>
-        <p>Individual project to create a website about my favorite place. Utilizes css grid for layout and php for page creation.</p>
+        <div id="projectgrid">
+            <div class="proj">
+                <h1>Placeholder</h1>
+                <a href="holomessage.html">
+                    <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
+            </div>
+            <div class="proj">
+                <h1>Fluent Design File Explorer</h1>
+                <a href="fluent.html">
+                    <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
+                </a>
+                <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
+            </div>
+            <div class="proj">
+                <h1>Web and Mobile II Final Project</h1>
+                <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
+                    <img src="assets/wmii/jetcarrierasset.png" alt="web mobile ii final"></img>
+                </a>
+                <p>Individual project to create a website about my favorite place. Utilizes css grid for layout and php for page creation.</p>
+            </div>
+        </div>
     </main>
     <footer>
         <div id="footwrap">
