HoloLens Messenger logo

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
         </div>
         <div id="projnav">
             <a href="holomessage.html">
-                <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+                <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger"></img>
             </a>
             <a href="fluent.html">
                 <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
@@ -52,11 +52,11 @@
     <main>
         <div id="projectgrid">
             <div class="proj">
-                <h1>Placeholder</h1>
+                <h1>HoloLens Messenger</h1>
                 <a href="holomessage.html">
-                    <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+                    <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger"></img>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Est sit amet facilisis magna etiam tempor orci.</p>
+                <p>Design and prototype of a messaging app for the Microsoft HoloLens.</p>
             </div>
             <div class="proj">
                 <h1>Fluent Design File Explorer</h1>
