--- a/holomessage.html
+++ b/holomessage.html
@@ -39,7 +39,7 @@
         </div>
         <div id="projnav">
             <a href="holomessage.html">
-                  <img src="assets/images/placeholder.png" alt="Placeholder"></img>
+                  <img src="assets/hololens_messenger/holologo.png" alt="Placeholder"></img>
             </a>
             <a href="fluent.html">
                 <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
@@ -50,9 +50,9 @@
         </div>
     </header>
     <main>
-        <h1>Hololens Messenger</h1>
+        <h1>HoloLens Messenger</h1>
 
-        <img class="projectpic" src="assets/images/placeholder.png" alt="Placeholder"></img>
+        <img class="projectpic" src="" alt=""></img>
         
         <figure>
             <iframe id="holodemo" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
