--- a/holomessage.html
+++ b/holomessage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley | Fluent File Explorer</title>
+    <title>Jacob Kinley | HoloLens Messenger</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
 
@@ -53,11 +53,25 @@
         <h1>HoloLens Messenger</h1>
 
         <img class="projectpic" src="" alt=""></img>
-        
+
+        <h2>Overview</h2>
+
+        <p>Messaging apps are a staple of mobile devices. The layout and experience that is offered is consistent across phones and tablets, but what about the holographic space that devices like the HoloLens utilize? How would a messaging app use real space?</p>
+
+        <h2>Why do this?</h2>
+
+        <p>I originally thought of this app when I attended a talk on campus about interaction paradigms and idioms and how they have changed over time. After the talk there was time set aside for a workshop period to create our own design paradigms/idioms. I have been infatuated with the HoloLens since its reveal, so I decided to create something for the unique space it provided.</p>
+
+        <h2>The Process</h2>
+
+        <img class="projectpic" id="taskflow" src="assets/hololens_messenger/user_taskflow.png" alt="User Taskflow"></img>
+
         <figure>
             <iframe id="holodemo" src="https://xd.adobe.com/embed/3eb55019-ed9b-4ec4-b0b2-e5c1fa4d27a3?hints=off" frameborder="0" allowfullscreen></iframe>
             <figcaption>Interactive lo-fi prototype</figcaption>
         </figure>
+
+
 
     </main>
     <footer>
