--- a/fluent.html
+++ b/fluent.html
@@ -50,10 +50,16 @@
         </div>
     </header>
     <main>
-        <h1>Fluent Design File Explorer</h1>
-        <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign" ></img>
-        <p>This is simply a personal exploration of the Fluent Design System introduced by Microsoft in 2017. I wanted to explore how the various requirements could be applied to a core part of the user experience in Windows 10: the File Explorer.</p>
-        <p>I wanted to focus on the features of the Fluent Design System that were easily marketable. "Reveal" adds discoverability to the interface by making the cursor a flashlight of sorts. As the user brings the cursor towards buttons or widgets that are interactive, the borders around those interactive elements reveal themselves to the user. "Acrylic" is the blurred material effect on the sidebar.</p>
+        <div class="projectgridc">
+            <h1>Fluent Design File Explorer</h1>
+
+            <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign" ></img>
+
+            <p>This is simply a personal exploration of the Fluent Design System introduced by Microsoft in 2017. I wanted to explore how the various requirements could be applied to a core part of the user experience in Windows 10: the File Explorer.</p>
+
+            <p>I wanted to focus on the features of the Fluent Design System that were easily marketable. "Reveal" adds discoverability to the interface by making the cursor a flashlight of sorts. As the user brings the cursor towards buttons or widgets that are interactive, the borders around those interactive elements reveal themselves to the user. "Acrylic" is the blurred material effect on the sidebar.</p>
+            
+        </div>
 
     </main>
     <footer>
