--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley | Fluent File Explorer</title>
+    <title>Jacob Kinley</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
 
@@ -21,12 +21,12 @@
             <ul>
                 <li>
                     <a href="projects.html">
-                        Works<div class="selected"></div>
+                        Works<div class="unselected"></div>
                     </a>
                 </li>
                 <li>
                     <a href="about.html">
-                        Me<div class="unselected"></div>
+                        Me<div class="selected"></div>
                     </a>
                 </li>
                 <li>
@@ -37,30 +37,16 @@
             </ul>
         </nav>
         </div>
-        <div id="projnav">
-            <a href="holomessage.html">
-                  <img src="assets/hololens_messenger/holologo.png" alt="Placeholder"></img>
-            </a>
-            <a href="fluent.html">
-                <img src="assets/fluent/p1image.png" alt="Project 1 Image"></img>
-            </a>
-            <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-                <img src="assets/wmii/jetcarrierasset.png" alt="Placeholder"></img>
-            </a>
-        </div>
     </header>
     <main>
-        <div class="projectgridc">
-            <h1>Fluent Design File Explorer</h1>
-
-            <img class="projectpic" src="assets/fluent/explorer.png" alt="File Explorer Redesign" ></img>
-
-            <p>This is simply a personal exploration of the Fluent Design System introduced by Microsoft in 2017. I wanted to explore how the various requirements could be applied to a core part of the user experience in Windows 10: the File Explorer.</p>
-
-            <p>I wanted to focus on the features of the Fluent Design System that were easily marketable. "Reveal" adds discoverability to the interface by making the cursor a flashlight of sorts. As the user brings the cursor towards buttons or widgets that are interactive, the borders around those interactive elements reveal themselves to the user. "Acrylic" is the blurred material effect on the sidebar.</p>
-            
+        <div id="indexgrid">
+            <h1>Jacob Kinley</h1>
+            <img src="assets/images/placeholder.png" alt="Image of Jacob Kinley"></img>
+            <p>I’m a 20-year-old Human Centered Computing student at Rochester Institute of Technology. I originally came in as a computer science student, but learned that I was drawn more to the design and usability of the systems I was working on than the algorithms behind them. Halfway through my second year, I learned about a new major called Human Centered Computing and instantly knew it was the right fit. I’m refactoring how I approach problem-solving, but that’s just another step in the development of a better me.</p>
+           <p>I am a student ambassador for my major’s department, and I have stepped into a leadership position because of it. I oversee bringing student feedback and criticism to the department’s attention. I am also an active member of the RIT UX Club’s graphics/design team for which I help design event posters and club branding.</p>
+            <p>I believe programs and interfaces should augment the user. They should elicit a sense of discovery, play, and achievement. They should not feel mysterious, unwieldy, or hard to use. The end goals of programs and interfaces vary widely, but the user experiences should follow these core tenets.</p>
+            <p>Feel free to have a look at my resume or reach out to me!</p>
         </div>
-
     </main>
     <footer>
         <div id="footwrap">
