--- a/holomessage.html
+++ b/holomessage.html
@@ -20,13 +20,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">
-                        Home<div class="unselected"></div>
+                    <a href="projects.html">
+                        Works<div class="selected"></div>
                     </a>
                 </li>
                 <li>
-                    <a href="projects.html">
-                        Projects<div class="selected"></div>
+                    <a href="about.html">
+                        Me<div class="unselected"></div>
                     </a>
                 </li>
                 <li>
