Surface Study Addition
- new page
- will have to rethink how to display
- edit of puhw1

--- a/puhw1.html
+++ b/puhw1.html
@@ -21,7 +21,7 @@
         <h2>Audience</h2>
         <p>This app is intended to provide information to anyone with an interest in elections, government, and geopolitics. Information will be presented in an accessible manner.</p>
         <h2>Scope</h2>
-        <p>Electoral aims to be unbiased in its presentation. Electoral will only provide data about an election. Electoral aims to represent all parties in a fair and balanced manner. Electoral will not focus on drama in media, only stated positions.</p>
+        <p>Electoral aims to be unbiased in its presentation. Electoral will only provide data about an election. Electoral aims to represent all parties in an objective manner. Electoral will not focus on drama in media, only stated positions.</p>
         <h2>About</h2>
         <p>This project is being explored by Jacob Kinley. Jacob is a third-year Human Centered Computing major at Rochester Institute of Technology. He has an active interest in geopolitics and the effects that come along with leadership change.</p>
     </main>
