--- a/puhw1.html
+++ b/puhw1.html
@@ -19,9 +19,9 @@
         <h2>Approach</h2>
         <p>Electoral will list all upcoming elections in all relevant countries. Countries will be able to be filtered by regions (EU, North America, East Asia, etc.) and users will be able to create their own filters. Electoral will provide users with as much relevant information as possible about an election: which parties are running, party stances, polling data, etc.</p>
         <h2>Audience</h2>
-        <p>This app is intended to provide information to anyone with an interest in elections, government, and geopolitics. Information will be presented in an accessible manner.</p>
+        <p>This app is intended to provide information to anyone with an interest in elections, government, and geopolitics. Information will be presented in an accessible manner. There may be a learning curve with terms used based on the context, so Electoral will provide a dictionary of what terms mean in context.</p>
         <h2>Scope</h2>
-        <p>Electoral aims to be unbiased in its presentation. Electoral will only provide data about an election. Electoral aims to represent all parties in an objective manner. Electoral will not focus on drama in media, only stated positions.</p>
+        <p>Electoral aims to be unbiased in its presentation. Electoral will only provide data about an election. Electoral aims to represent all parties in an objective manner. Electoral will not focus on drama in media, only stated positions. Electoral does not aim to influence elections, only provide data. Electoral aims to be a tool used by observers, not necessarily participants.</p>
         <h2>About</h2>
         <p>This project is being explored by Jacob Kinley. Jacob is a third-year Human Centered Computing major at Rochester Institute of Technology. He has an active interest in geopolitics and the effects that come along with leadership change.</p>
     </main>
