--- a/surface.html
+++ b/surface.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley | Fluent File Explorer</title>
+    <title>Jacob Kinley | Surface Independent Study</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script>
 
