--- a/puhw1.html
+++ b/puhw1.html
@@ -5,13 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jacob Kinley | Project Goals</title>
     <link rel="stylesheet" href="assets/css/pustyle.css">
-    <script>
-
-    </script>
 </head>
 <body onload="document.body.style.opacity='1'">
     <header>
         <h1>Electoral</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="puhw1.html">Goals</a>
+                </li>
+                <li>
+                    <a href="puhw2.html">LoFi</a>
+                </li>
+                <li>
+                    <a href="">LoFi Eval</a>
+                </li>
+                <li>
+                    <a href="">HiFi</a>
+                </li>
+                <li>
+                    <a href="">HiFi Eval</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h2>Goals</h2>
