--- a/puhw1.html
+++ b/puhw1.html
@@ -18,13 +18,13 @@
                     <a href="puhw2.html">LoFi</a>
                 </li>
                 <li>
-                    <a href="">LoFi Eval</a>
+                    <a href="puhw3.html">LoFi Eval</a>
                 </li>
                 <li>
-                    <a href="">HiFi</a>
+                    <a href="puhw4.html">HiFi</a>
                 </li>
                 <li>
-                    <a href="">HiFi Eval</a>
+                    <a href="puhw5.html">HiFi Eval</a>
                 </li>
             </ul>
         </nav>
