--- a/puhw3.html
+++ b/puhw3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jacob Kinley | LoFi Prototype</title>
+    <title>Jacob Kinley | LoFi Evaluation</title>
     <link rel="stylesheet" href="assets/css/pustyle.css">
 </head>
 <body onload="document.body.style.opacity='1'">
@@ -30,14 +30,11 @@
         </nav>
     </header>
     <main>
-        <img src="assets/put/switch.PNG" alt="Image showing the switch view functionality">
-        <p>Users can switch the view of the map to a list of countries to better filter them.</p>
-        <img src="assets/put/filter.PNG" alt="Image showing the filter functionality">
-        <p>Users can filter what region they want to focus on.</p>
-        <img src="assets/put/settings.PNG" alt="Image showing the settings">
-        <p>Users can change certain settings of the app</p>
-        <img src="assets/put/details.PNG" alt="Image showing the details of a certain selection">
-        <p>Users can find out more details on an election, such as candidates and polling data.</p>
+        <iframe width="438" height="930" src="//invis.io/6YGIPZSVH24" frameborder="0" allowfullscreen></iframe>
+        <p>Many improvements were made to the previous LoFi prototype from hw2 based on feedback in class. Navigation is the most obvious improvement, as it has been simplified but also enhanced. There are less pages, but more straight-forward functionality on each page.</p>
+        <p>The above LoFi prototype was tested with two users. Both responded positively.</p>
+        <p>The usability test used was the system usability scale. The only point of confusion mentioned by the users was the usage of filled in black circles versus white circles, but this confusiong was temporary.</p>
+        <p>Additional comments were positive. Users liked the basic layout and thought the breakdown of regions to countries to states/provinces made sense. </p>
     </main>
     <footer>
         &copy Jacob Kinley
