--- a/puhw3.html
+++ b/puhw3.html
@@ -35,6 +35,9 @@
         <p>The above LoFi prototype was tested with two users. Both responded positively.</p>
         <p>The usability test used was the system usability scale. The only point of confusion mentioned by the users was the usage of filled in black circles versus white circles, but this confusiong was temporary.</p>
         <p>Additional comments were positive. Users liked the basic layout and thought the breakdown of regions to countries to states/provinces made sense. </p>
+        <p>User 1 had a score of 80/100 on the SUS.</p>
+        <p>User 2 had a score of 85/100 on the SUS.</p>
+        <p>The raw scores of the users can be seen <a href="https://docs.google.com/spreadsheets/d/1SnA3VQ860Aig9zgRhZqL_NcNg4Uz-sD5wKtWqVnpT3s/edit?usp=sharing">here</a>.</p>
     </main>
     <footer>
         &copy Jacob Kinley
