--- a/puhw3.html
+++ b/puhw3.html
@@ -33,7 +33,7 @@
         <iframe width="438" height="930" src="//invis.io/6YGIPZSVH24" frameborder="0" allowfullscreen></iframe>
         <p>Many improvements were made to the previous LoFi prototype from hw2 based on feedback in class. Navigation is the most obvious improvement, as it has been simplified but also enhanced. There are less pages, but more straight-forward functionality on each page.</p>
         <p>The above LoFi prototype was tested with two users. Both responded positively.</p>
-        <p>The usability test used was the system usability scale. The only point of confusion mentioned by the users was the usage of filled in black circles versus white circles, but this confusiong was temporary.</p>
+        <p>The usability test used was the system usability scale. The only point of confusion mentioned by the users was the usage of filled in black circles versus white circles, but this confusion was temporary and was cleared up by further exploration of the prototype.</p>
         <p>Additional comments were positive. Users liked the basic layout and thought the breakdown of regions to countries to states/provinces made sense. There was a request by one user for additional settings for push notifications.</p>
         <p>User 1 had a score of 80/100 on the SUS.</p>
         <p>User 2 had a score of 85/100 on the SUS.</p>
