--- a/puhw3.html
+++ b/puhw3.html
@@ -37,6 +37,7 @@
         <p>Additional comments were positive. Users liked the basic layout and thought the breakdown of regions to countries to states/provinces made sense. There was a request by one user for additional settings for push notifications.</p>
         <p>User 1 had a score of 80/100 on the SUS.</p>
         <p>User 2 had a score of 85/100 on the SUS.</p>
+        <p>These scores indicate that the system is very usable and easy to learn.</p>
         <p>The raw scores of the users can be seen <a href="https://docs.google.com/spreadsheets/d/1SnA3VQ860Aig9zgRhZqL_NcNg4Uz-sD5wKtWqVnpT3s/edit?usp=sharing">here</a>.</p>
     </main>
     <footer>
