Email + info corrections

--- a/holomessage.html
+++ b/holomessage.html
@@ -83,7 +83,7 @@
         <div id="footwrap">
         <div>&copy Jacob Kinley</div>
         <div>|</div>
-        <div><a href="mailto:me@jacobkinley.com">Contact me!</a></div>
+        <div><a href="mailto:mailto:jdk1061@rit.edu">Contact me!</a></div>
         </div>
     </footer>
 </body>
