--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,13 @@
         <div id="projectgrid">
             <div class="proj">
                 <h1>HoloLens Messenger</h1>
+                <a href="pics.html">
+                    <img src="assets/pics/pamslogo.png" alt="PAMS">
+                </a>
+                <p>UI design for a customer facing application at PICS Telecom International.</p>
+            </div>
+            <div class="proj">
+                <h1>HoloLens Messenger</h1>
                 <a href="holomessage.html">
                     <img src="assets/hololens_messenger/holologo.png" alt="HoloLens Messenger"></img>
                 </a>
@@ -65,20 +72,13 @@
                 </a>
                 <p>A redesign of the Windows File Explorer using the Microsoft Fluent Design System guidelines.</p>
             </div>
-            <div class="proj">
-                <h1>Web and Mobile II Final Project</h1>
-                <a href="https://people.rit.edu/~jdk1061/web_mobile_final_project/index.php">
-                    <img src="assets/wmii/jetcarrierasset.png" alt="web mobile ii final"></img>
-                </a>
-                <p>Individual project to create a website about my favorite place. Utilizes css grid for layout and php for page creation.</p>
-            </div>
         </div>
     </main>
     <footer>
         <div id="footwrap">
         <div>&copy Jacob Kinley</div>
         <div>|</div>
-        <div><a href="mailto:me@jacobkinley.com">Contact me!</a></div>
+        <div><a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
         </div>
     </footer>
 </body>
