--- a/xyz.html
+++ b/xyz.html
@@ -60,7 +60,7 @@
         <div id="footwrap">
         <div>&copy Jacob Kinley</div>
         <div>|</div>
-        <div><a href="mailto:me@jacobkinley.com">Contact me!</a></div>
+        <div><a href="mailto:jdk1061@rit.edu">Contact me!</a></div>
         </div>
     </footer>
 </body>
